# cfireants

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
backend/cpu/: backend_cpu.c
backend/cuda/: backend_cuda.cu  backend_cuda_ops.cu  cc_loss.cu  cuda_common.cu  downsample_fft.cu  fused_blur.cu  fused_cc.cu  fused_compose.cu  greedy_gpu.cu  grid_sample.cu  kernels.h  linear_gpu.cu  mi_loss.cu  moments_gpu.cu  syn_gpu.cu  warp_inverse.cu
backend/metal/: backend_metal.m  backend_metal_ops.m  greedy_metal.m  linear_metal.m  metal_context.h  metal_context.m  metal_fft.m  metal_kernels.h  metal_kernels.m  syn_metal.m
backend/metal/shaders/: affine_grid_bwd.metal  blur.metal  cc_loss.metal  compose.metal  elementwise.metal  grid_sample.metal  mi_loss.metal  permute.metal  reduction.metal  warp_inverse.metal
backend/webgpu/: backend_webgpu.c  backend_webgpu_ops.c  fft_cpu_fallback.c  greedy_webgpu.c  linear_webgpu.c  shader_loader.h  syn_webgpu.c  webgpu_context.c  webgpu_context.h  webgpu_kernels.c  webgpu_kernels.h  webgpu_kernels_gpu.c  wgsl_sources.h
backend/webgpu/shaders/: adam.wgsl  affine_grid.wgsl  affine_grid_bwd.wgsl  blur_dhw3.wgsl  blur_image.wgsl  cc_loss.wgsl  compose.wgsl  elementwise.wgsl  fused_cc.wgsl  fused_cc_bwd_grads.wgsl  fused_cc_bwd_modify.wgsl  grid_sample.wgsl  grid_sample_bwd.wgsl  mi_gradient.wgsl  mi_histogram.wgsl  mi_loss.wgsl  reduce_max.wgsl  reduction.wgsl  resize.wgsl  warp_ops.wgsl
include/cfireants/: backend.h  image.h  interpolator.h  losses.h  registration.h  tensor.h  utils.h
scripts/: embed_metallib.py
src/: image.c  interpolator.c  losses.c  main.c  nifti_io.c  tensor.c  utils.c
src/registration/: affine.c  greedy.c  moments.c  rigid.c  syn.c
tests/: export_affine_data.py  export_deformable_data.py  export_moments_data.py  export_rigid_data.py  export_test_data.py  test_cc_compare.c  test_cc_compare_py.c  test_cpu_vs_metal.c  test_cuda_backend.c  test_fft_fallback.c  test_gpu_pipeline.c  test_metal_backend.c  test_metal_linear.c  test_nifti_load.c  test_phase2.c  test_phase3.c  test_phase4.c  test_phase5.c  test_phase6.c  test_validate_all.c  test_validate_metal.c  test_validate_webgpu.c  test_webgpu_basic.c  test_webgpu_linear.c
tests/test_data/: adam_param.json  cc_grad_k7.json  cc_loss_k7.json  gs_grid.json  mom_medium_Rf.json  mom_small_tf.json  rigid_medium_moved.json  rigid_medium_rigid_34.json  rigid_medium_rigid_mat.json
validate/: README.md  run_validation.py
validate/large/output/: affine_transform.mat  metrics.json
validate/medium/output/: affine_transform.mat  metrics.json
validate/reference/large/: metrics.json
validate/reference/medium/: metrics.json
validate/reference/small/: metrics.json
validate/skulllstrip/: README.md
validate/small/output/: affine_transform.mat  metrics.json
